@@ -6,6 +6,7 @@ Version 0.10.0~dev
 	* Add a "--version" option to toolbox2-transcode
 	* Allow to transcode a single frame
 	* Allow to seek (start the transcode at a specified offset)
+	* Add support for 'lt', 'standard' and 'hq' prores profiles
 	* Various fixes
 
 Version 0.9.0 Released on 2014/09/17
